@@ -5,6 +5,9 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Don't blow it for numeric -newkey arguments to apps/req.
+     [Bodo Moeller <3moeller@informatik.uni-hamburg.de>]
+
   *) Temp key "for export" tests were wrong in s3_srvr.c.
      [Anonymous <nobody@replay.com>]
 
